# edge-ai-master

./: README.md
2/: README.md  pyproject.toml  (+2 more)
3/: pyproject.toml
3/docker-codes/: README.md
3/docker-codes/01-basic-dockerfile/: Dockerfile  inference.py  requirements.txt
3/docker-codes/02-multistage-dockerfile/: Dockerfile  inference.py  requirements.txt
3/docker-codes/03-docker-compose-stack/: .dockerignore  .env  Dockerfile  docker-compose.yml  inference.py  requirements.txt
3/docker-codes/04-check-architecture/: check_architecture.py
3/hands-on-lab/: .dockerignore  .env  Dockerfile  README.md  crash_test_docker.py  crash_test_systemd.py  docker-compose-mqtt.yml  docker-compose.yml  edgeai.service  inference.py  requirements.txt  test_start_limit_burst.py
3/hands-on-lab/logs/: README.txt
3/hands-on-lab/models/: README.txt
3/learnbash/: 01_hello.sh  02_variables.sh  03_command_output.sh  04_readonly_vars.sh  05_greet.sh  06_check_arg.sh  07_if_numbers.sh  08_if_strings.sh  09_if_file_check.sh  10_for_list.sh  11_for_range.sh  12_for_files.sh  13_for_command.sh  14_while_basic.sh  15_while_infinite.sh  16_while_read_file.sh  17_case_statement.sh  18_set_e.sh  19_set_u.sh  20_safe_mode.sh  21_health_report.sh  22_download_model.sh  23_cron_examples.sh  24_functions.sh  25_read_input.sh  26_read_prompt.sh  27_read_password.sh  28_colours.sh  29_cleanup_logs.sh  30_batch_inference.sh  31_run_inference.sh  32_combined_demo.sh  README.md
3/systemd-programs/02-systemctl-basics/: README.md
3/systemd-programs/04-service-section/: service_section_demo.py
(+96 files in other folders)
